--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <article>    <!-- 背景圖、灯箱-圖片說明 -->
 
-    <img id="watchface"  src="./j23watch/clock-w-d.png">
+    <img id="watchface"  src="./j23watch/clock-w-d2.png">
     <img class="stars-1" src="./j23watch/stars-1b.png">
     <img class="stars-2" src="./j23watch/stars-2.png">
 
