--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <input type="button" value="德黑蘭" onclick="onClock(-4)">
         <br>
       </div>
-      <input class="rounded-pill" type="button" value="時區" onclick="fakeBtn('btnClock')">  
+      <input class="rounded-pill" type="button" value="時鐘" onclick="fakeBtn('btnClock')">  
     </nav>
 
     <nav class="nav-2 text-end">
